[package]
name = "currency_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client with Rustls TLS (no OpenSSL required)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing (optional, but useful for a CLI tool)
clap = { version = "4.5", features = ["derive"] }

